<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:background="#ffffff"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_all_popup_window"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingVertical="8dp"
        android:text="@string/all"
        android:textColor="#6d6d6d"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tv_android_popup_window"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingVertical="8dp"
        android:text="@string/android"
        android:textColor="#6d6d6d"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tv_product_popup_window"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingVertical="8dp"
        android:text="@string/product"
        android:textColor="#6d6d6d"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tv_frontend_popup_window"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingVertical="8dp"
        android:text="@string/frontend"
        android:textColor="#6d6d6d"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tv_design_popup_window"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingVertical="8dp"
        android:text="@string/design"
        android:textColor="#6d6d6d"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tv_backend_popup_window"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingVertical="8dp"
        android:text="@string/backend"
        android:textColor="#6d6d6d"
        android:textSize="15sp" />


</LinearLayout>
